<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PlantInfoFragment"
        android:layout_gravity="center_vertical|center_horizontal"
        android:foregroundGravity="center"
        android:orientation="vertical"
        android:background="@drawable/leaf">
    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <ImageView android:id="@+id/plant_img"
            android:src="@drawable/leaf"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:scaleType="fitXY"/>
    <TextView android:id="@+id/plant_name"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:textSize="30dp"
            android:fontFamily="@font/black"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Placeholder"/>
    <TextView android:id="@+id/plant_sf_name"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="Placeholder"/>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp">
    <Button android:id="@+id/edible"
            android:text=""
            android:clickable="false"
            android:layout_width="30dp"
            android:layout_height="30dp" />
    <TextView
            android:text="@string/edible"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">
    <TextView
            android:text="@string/edible_part"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    <TextView android:id="@+id/edible_part"
            android:text="placeholder"
            android:textSize="25dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
    <TextView
            android:text="@string/ligneous_type"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    <TextView android:id="@+id/ligneous_type"
            android:text="placeholder"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
    <TextView
            android:text="@string/growth_form"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    <TextView android:id="@+id/growth_form"
            android:text="placeholder"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
    <TextView
            android:text="@string/growth_habit"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    <TextView android:id="@+id/growth_habit"
            android:text="placeholder"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
    <TextView
            android:text="@string/growth_rate"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    <TextView android:id="@+id/growth_rate"
            android:text="placeholder"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
        <TextView
                android:text="@string/average_height"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        <TextView android:id="@+id/average_height"
                android:text="placeholder"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
        <TextView
                android:text="@string/max_height"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        <TextView android:id="@+id/max_height"
                android:text="placeholder"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center" />
    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>